[gd_scene load_steps=11 format=3 uid="uid://dc34063stpmw"]

[ext_resource type="Script" path="res://chat_text.gd" id="1_84qyd"]

[sub_resource type="LabelSettings" id="LabelSettings_6qyb2"]
font_color = Color(1, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_u2cd3"]
font_size = 13

[sub_resource type="LabelSettings" id="LabelSettings_ach21"]
font_size = 13

[sub_resource type="LabelSettings" id="LabelSettings_djnfv"]
font_size = 13

[sub_resource type="LabelSettings" id="LabelSettings_urr3g"]
font_size = 13

[sub_resource type="LabelSettings" id="LabelSettings_v1t8f"]
font_size = 13

[sub_resource type="LabelSettings" id="LabelSettings_7gwuk"]
font_size = 13

[sub_resource type="LabelSettings" id="LabelSettings_uo211"]
font_size = 13

[sub_resource type="LabelSettings" id="LabelSettings_www2n"]
font_size = 13

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_84qyd")

[node name="InputContainer" type="VBoxContainer" parent="."]
layout_mode = 1
offset_right = 750.0
offset_bottom = 675.0
scale = Vector2(1, 0.962)
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Label" type="Label" parent="InputContainer"]
layout_mode = 2
text = "User"

[node name="HBoxContainer" type="HBoxContainer" parent="InputContainer"]
layout_mode = 2

[node name="InputEdit" type="TextEdit" parent="InputContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 100)
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 3
text = "How are you."
wrap_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="InputContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="InputContainer/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="InputContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "SexuallyExplicit"
horizontal_alignment = 1

[node name="SexuallyExplicitOptionButton" type="OptionButton" parent="InputContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="InputContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "HateSpeech"
horizontal_alignment = 1

[node name="HateSpeechOptionButton" type="OptionButton" parent="InputContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="InputContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Harassment"
horizontal_alignment = 1

[node name="HarassmentOptionButton" type="OptionButton" parent="InputContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="InputContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "DangerousContent"
horizontal_alignment = 1

[node name="DangerousContentOptionButton" type="OptionButton" parent="InputContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer5" type="HBoxContainer" parent="InputContainer"]
layout_mode = 2
alignment = 1

[node name="SendButton" type="Button" parent="InputContainer/HBoxContainer5"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
text = "Send"

[node name="HBoxContainer3" type="HBoxContainer" parent="InputContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="InputContainer/HBoxContainer3"]
layout_mode = 2
text = "Model"

[node name="FinishedLabel" type="Label" parent="InputContainer/HBoxContainer3"]
visible = false
layout_mode = 2
label_settings = SubResource("LabelSettings_6qyb2")

[node name="HBoxContainer2" type="HBoxContainer" parent="InputContainer"]
layout_mode = 2

[node name="ResponseEdit" type="TextEdit" parent="InputContainer/HBoxContainer2"]
custom_minimum_size = Vector2(250, 280)
layout_mode = 2
size_flags_horizontal = 3
editable = false
wrap_mode = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="InputContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="InputContainer/HBoxContainer4"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="InputContainer/HBoxContainer4/HBoxContainer"]
layout_mode = 2
text = "SexuallyExplicit"
label_settings = SubResource("LabelSettings_u2cd3")
horizontal_alignment = 1

[node name="SexuallyExplicitStatus" type="Label" parent="InputContainer/HBoxContainer4/HBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_ach21")
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="InputContainer/HBoxContainer4"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="InputContainer/HBoxContainer4/HBoxContainer2"]
layout_mode = 2
text = "HateSpeech"
label_settings = SubResource("LabelSettings_djnfv")
horizontal_alignment = 1

[node name="HateSpeechStatus" type="Label" parent="InputContainer/HBoxContainer4/HBoxContainer2"]
layout_mode = 2
label_settings = SubResource("LabelSettings_urr3g")
horizontal_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="InputContainer/HBoxContainer4"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Label3" type="Label" parent="InputContainer/HBoxContainer4/HBoxContainer3"]
layout_mode = 2
text = "Harassment"
label_settings = SubResource("LabelSettings_v1t8f")
horizontal_alignment = 1

[node name="HarassmentStatus" type="Label" parent="InputContainer/HBoxContainer4/HBoxContainer3"]
layout_mode = 2
text = "NEGLIGIBLE"
label_settings = SubResource("LabelSettings_7gwuk")
horizontal_alignment = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="InputContainer/HBoxContainer4"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Label4" type="Label" parent="InputContainer/HBoxContainer4/HBoxContainer4"]
layout_mode = 2
text = "DangerousContent"
label_settings = SubResource("LabelSettings_uo211")
horizontal_alignment = 1

[node name="DangerousContentStatus" type="Label" parent="InputContainer/HBoxContainer4/HBoxContainer4"]
layout_mode = 2
text = "NEGLIGIBLE"
label_settings = SubResource("LabelSettings_www2n")
horizontal_alignment = 1

[node name="HistoryContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 5.0
offset_top = 2.5
offset_right = 41.0
offset_bottom = 677.5

[node name="Label" type="Label" parent="HistoryContainer"]
layout_mode = 2
text = "User"

[connection signal="pressed" from="InputContainer/HBoxContainer5/SendButton" to="." method="_on_send_button_pressed"]
